--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta name="viewport" content="width=device-width, intital-scale=1.0">
     <title>enigma induction task 3</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styling.css">
 </head>
 <body>
         <div class="container">
